--- a/src/ThreeColumns/index.less
+++ b/src/ThreeColumns/index.less
@@ -1,19 +1,67 @@
-.first{
-  background-color: yellow;
-  width: 100px;
-  height: 100px;
+/* 圣杯布局 开始
+.parent {
+  padding-left: 220px; 为左右栏腾出空间
+  padding-right: 220px;
+}
+
+
+.left {
   float: left;
+  width: 200px;
+  height: 400px;
+  background: red;
+  margin-left: -100%;
+  position: relative;
+  left: -220px;
 }
 
-.second{
-  background-color: blue;
-  height: 100px;
-  color: white;
+
+.center {
+  float: left;
+  width: 100%;
+  height: 500px;
+  background: yellow;
 }
 
-.three{
-  background-color: black;
-  height: 100px;
-  color: white;
-  float: right;
+.right {
+  float: left;
+  width: 200px;
+  height: 400px;
+  background: blue;
+  margin-left: -200px;
+  position: relative;
+  right: -220px;
 }
+圣杯布局 结束*/
+
+
+/* 双飞翼 开始*/
+.parent {
+  min-width: 600px;
+}
+
+.left {
+  float: left;
+  width: 200px;
+  height: 400px;
+  background: red;
+  margin-left: -100%;
+}
+.center {
+  float: left;
+  width: 100%;
+  height: 500px;
+  background: yellow;
+}
+.center .inner {
+  margin: 0 200px;
+}
+.right {
+  float: left;
+  width: 200px;
+  height: 400px;
+  background: blue;
+  margin-left: -200px;
+}
+
+/* 双飞翼 结束*/
